[tool.poetry]
name = "my-rad-project"
version = "0.1.0"
description = ""
authors = ["Lorcan Rae <lorcanrae@gmail.com>"]
readme = "README.md"
packages = [{include = "my_rad_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
